# Game-Of-Life

./: CMakeCache.txt  Doxyfile  GameOfLife  main.c  makefile  makegame  step1.c  step1.h
Console/: ainsi_console.c  board_drawer.h
Game/: life.c  life.h
Game_of_Life/: CMakeLists.txt  main.c
Game_of_Life/Console/: ainsi_console.c
Game_of_Life/Game/: life.c  life.h
Unit_Tests/: Board_tests.c  boardTests
